--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -5,7 +5,7 @@
     padding: 15px 20px;
     background-color: rgb(44, 176, 199);
     h1 {
-
+      text-align: center;
       color: #fff;
     }
   }
